bynkc/tests/fixtures/positive/256_context_uses_commons_static_method_workers/src/money/money.bynk
commons money {
  type Cents = Int where NonNegative

  fn Cents.fromInt(n: Int) -> Result[Cents, ValidationError] {
    Cents.of(n)
  }

  fn Cents.equals(self, other: Cents) -> Bool {
    self == other
  }
}
