bynkc/tests/fixtures/negative/409_match_refined_nested_payload_rejected/input.bynk
commons demo {
  fn f(r: Result[Int, String]) -> Int {
    match r {
      Ok(_ where NonNegative) => 1
      Ok(_) => 2
      Err(_) => 3
    }
  }
}
